--- a/app/src/main/res/layout/notes_list_fragment.xml
+++ b/app/src/main/res/layout/notes_list_fragment.xml
@@ -33,7 +33,8 @@
                         android:layout_width="wrap_content"
                         android:layout_height="300dp"
                         android:layout_gravity="center"
-                        android:padding="8dp"/>
+                        android:padding="8dp"
+                        app:srcCompat="@drawable/empty_note"/>
 
                     <TextView
                         android:id="@+id/empty_text"
@@ -66,7 +67,8 @@
                 android:layout_margin="16dp"
                 app:layout_anchor="@id/contentFrame"
                 app:layout_anchorGravity="bottom|right|end"
-                app:fabSize="normal" />
+                app:fabSize="normal"
+                app:srcCompat="@drawable/add_note_fab"/>
         </androidx.coordinatorlayout.widget.CoordinatorLayout>
 
     </RelativeLayout>
