--- a/app/src/main/res/layout/notes_list_fragment.xml
+++ b/app/src/main/res/layout/notes_list_fragment.xml
@@ -4,6 +4,15 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     >
 
+    <data>
+
+        <import type="android.view.View" />
+        <import type="androidx.core.content.ContextCompat" />
+        <variable
+            name="viewModel"
+            type="com.example.notes.notesList.NotesListViewModel" />
+    </data>
+
     <RelativeLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent">
@@ -26,6 +35,7 @@
                     android:orientation="vertical"
                     android:layout_gravity="center"
                     android:gravity="center"
+                    android:visibility="@{viewModel.isListEmpty() ? View.VISIBLE : View.GONE }"
                     >
 
                     <ImageView
@@ -50,7 +60,7 @@
                     android:id="@+id/notes_list_container"
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
-
+                    android:visibility="@{viewModel.isListEmpty() ? View.GONE : View.VISIBLE}"
                     >
                     <androidx.recyclerview.widget.RecyclerView
                         android:id="@+id/notes_list"
