--- a/app/src/main/res/layout/create_note_fragment.xml
+++ b/app/src/main/res/layout/create_note_fragment.xml
@@ -5,7 +5,9 @@
     >
 
     <data>
-
+        <variable
+            name="viewModel"
+            type="com.example.notes.createNote.CreateNoteViewModel" />
     </data>
 
     <ScrollView
@@ -14,7 +16,7 @@
 
         <RelativeLayout
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
+            android:layout_height="wrap_content"
             android:orientation="vertical"
             android:paddingBottom="16dp"
             android:paddingLeft="16dp"
@@ -43,7 +45,8 @@
                         android:hint="@string/edit_title_placeholder"
                         android:imeOptions="flagNoExtractUi"
                         android:maxLines="1"
-                        android:textAppearance="@style/TextAppearance.AppCompat.Title" />
+                        android:textAppearance="@style/TextAppearance.AppCompat.Title"
+                        android:text="@={viewModel.title}"/>
 
                     <EditText
                         android:id="@+id/create_note_content"
@@ -52,7 +55,9 @@
                         android:fontFamily="@font/roboto"
                         android:gravity="top"
                         android:hint="@string/edit_note_content_placeholder"
-                        android:imeOptions="flagNoExtractUi" />
+                        android:imeOptions="flagNoExtractUi"
+                        android:text="@={viewModel.content}"
+                        />
 
                 </LinearLayout>
 
@@ -69,7 +74,8 @@
                 app:fabSize="normal"
                 app:layout_anchor="@id/contentFrame"
                 android:layout_gravity="bottom"
-                app:layout_anchorGravity="bottom|right|end" />
+                app:layout_anchorGravity="bottom|right|end"
+                android:onClick="@{() -> viewModel.saveNote()}"/>
             </androidx.coordinatorlayout.widget.CoordinatorLayout>
 
         </RelativeLayout>
