--- a/app/src/main/res/layout/note_list_item.xml
+++ b/app/src/main/res/layout/note_list_item.xml
@@ -6,6 +6,10 @@
         <variable
             name="note"
             type="com.example.notes.data.Note" />
+
+        <variable
+            name="listener"
+            type="com.example.notes.notesList.NoteOnClickListener" />
     </data>
 
     <androidx.constraintlayout.widget.ConstraintLayout
@@ -20,7 +24,8 @@
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:layout_margin="8dp"
-            app:cardCornerRadius="5dp">
+            app:cardCornerRadius="5dp"
+            android:onClick="@{() -> listener.onNoteClicked(note)}">
 
             <TextView
                 android:id="@+id/note_title_text"
