--- a/app/src/main/res/navigation/navigation.xml
+++ b/app/src/main/res/navigation/navigation.xml
@@ -36,5 +36,8 @@
         android:label="NoteDetailsFragment" >
         <argument android:name="note"
             app:argType="com.example.notes.data.Note" />
+        <action
+            android:id="@+id/action_noteDetailsFragment_to_notesListFragment"
+            app:destination="@id/notesListFragment" />
     </fragment>
 </navigation>
