--- a/app/src/main/res/layout/create_note_fragment.xml
+++ b/app/src/main/res/layout/create_note_fragment.xml
@@ -46,7 +46,8 @@
                         android:imeOptions="flagNoExtractUi"
                         android:maxLines="1"
                         android:textAppearance="@style/TextAppearance.AppCompat.Title"
-                        android:text="@={viewModel.title}"/>
+                        android:text="@={viewModel.title}"
+                        android:textIsSelectable="true"/>
 
                     <EditText
                         android:id="@+id/create_note_content"
@@ -57,6 +58,7 @@
                         android:hint="@string/edit_note_content_placeholder"
                         android:imeOptions="flagNoExtractUi"
                         android:text="@={viewModel.content}"
+                        android:textIsSelectable="true"
                         />
 
                 </LinearLayout>
