--- a/app/src/main/res/layout/note_details_fragment.xml
+++ b/app/src/main/res/layout/note_details_fragment.xml
@@ -32,6 +32,19 @@
             android:layout_height="1dp"
             android:background="@android:color/darker_gray"
             android:paddingBottom="8dp"/>
+        <TextView
+            android:id="@+id/note_creation_date_text"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_gravity="end"
+            android:textColor="@android:color/tertiary_text_light"
+            android:fontFamily="@font/roboto"
+            android:paddingTop="4dp"
+            android:layout_marginBottom="8dp"
+            android:text="Created on date"
+            android:textAlignment="viewEnd"
+
+            />
 
         <TextView
             android:id="@+id/note_details_content_text"
@@ -43,5 +56,7 @@
             android:text="@{note.content}"
             android:textSize="@dimen/regular_text_size"
             tools:text="Note content goes here." />
+
+
     </LinearLayout>
 </layout>
