--- a/app/src/main/res/layout/note_list_item.xml
+++ b/app/src/main/res/layout/note_list_item.xml
@@ -30,7 +30,10 @@
             app:cardElevation="2dp"
 
             android:onClick="@{() -> listener.onNoteClicked(note)}">
-
+        <RelativeLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            >
             <TextView
                 android:id="@+id/note_title_text"
                 android:layout_width="wrap_content"
@@ -42,7 +45,22 @@
                 android:paddingStart="16dp"
                 android:paddingEnd="16dp"
                 android:textSize="16sp"
-                android:textStyle="bold" />
+                android:textStyle="bold"
+                android:layout_alignParentStart="true"
+                android:layout_centerVertical="true"
+                />
+
+            <Button
+                android:layout_width="48dp"
+                android:layout_height="48dp"
+                android:id="@+id/bookmark_button"
+                android:text="@{note.bookmarked ? @string/bookmarked : @string/not_bookmarked}"
+                android:layout_alignParentEnd="true"
+                android:layout_centerVertical="true"
+                android:onClick="@{() -> listener.bookmarkNote(note)}"
+                />
+        </RelativeLayout>
+
         </androidx.cardview.widget.CardView>
     </androidx.constraintlayout.widget.ConstraintLayout>
 </layout>
